<resources>
    <string name="app_name">SwayamSevakClient</string>
    <string name="list_events_button_text">List events</string>
    <string name="view_contributions_button_text">View contributions</string>
    <string name="update_contributor_info_button_text">Update personal information</string>
    <string name="delete_participation_button_text">Delete participation</string>
    <string name="volunteer_button_text">Volunteer</string>
    <string name="donate_button_text">Donate</string>
    <string name="details_added_message_text_view">Details are successfully saved!!</string>
    <string name="show_current_funds_text_view">Current funds</string>
    <string name="ask_add_more_button">Add more locally?</string>
    <string name="leave_button">Leave</string>
    <string name="back_from_contribution_list_button">Back</string>
    <string name="participant_details_updated_button_text">Update</string>
    <string name="participant_abandon_confirm_button">Confirm</string>
    <string name="participant_abandon_revert_button">Cancel</string>
    <string name="participant_unsubscribed_message_text_view">You are successfully unsubscribed!!</string>
    <string name="participant_unsubscribed_button">OK</string>
    <string name="volunteer_go_button_text">Go</string>
    <string name="volunteer_logout_button_text">Logout</string>
    <string name="main_activity_label">HOME</string>
    <string name="login_activity_label">LOGIN</string>
    <string name="registration_activity_label">REGISTRATION</string>
    <string name="loginTextview">Already a Volunteer? Login here!!</string>
    <string name="registerTextview">Don\'t have an Account? Register here!!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="hint_aadhaar">Aadhaar Number</string>
    <string name="home_activity_label">HOME</string>
    <string name="location_suggestion_message_textview">Suggestion</string>
    <string name="choosen_location_textview">Choosen</string>
    <string name="volunteer_enter_location_hint_edittext">Enter desired location</string>
    <string name="update_participant_details_button_text">Update</string>
    <string name="aries_moon_sign">Mesha</string>
    <string name="tauras_moon_sign">Vrishabha</string>
    <string name="gemini_moon_sign">Mithun</string>
    <string name="cancer_moon_sign">Mesha</string>
    <string name="moon_sign_prompt">Please select your rashi</string>
    <string name="star_sign_prompt">Please select your star</string>
    <string name="agastya_gotra_sign">Agastaya</string>
    <string name="angirasa_gotra_sign">Angirasa</string>
    <string name="atri_gotra_sign">Atri</string>
    <string name="bhrigu_gotra_sign">Bhrigu</string>
    <string name="gotra_sign_prompt">Please select your gotra</string>
    <string name="query_current_funds_button">Current funds</string>
    <string name="title_activity_maps">Volunteer Home</string>
    <string name="btn_checkin">Check In</string>
    <string name="btn_checkout">Check Out</string>
    <string name="CheckOut">Check Out</string>
    <string name="CheckIn">Check In</string>
    <string name="targetID">Target Fund</string>
    <string name="currentID">Current Fund</string>
    <string name="targetex">Target \u003A %1$s</string>
    <string name="currentex">Current \u003A %1$s</string>
    <string name="listevents"> List events</string>
    <string name="view">View contribution</string>
    <string name="update">Update info</string>
    <string name="withdraw">Withdraw participation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="go_passive">Go Passive</string>
    <string name="logout">Logout</string>
    <string-array name="update_photo">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Cancel</item>
    </string-array>

</resources>
