<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/show_current_funds_text_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/show_current_funds_text_view"/>

    <Button
        android:id="@+id/add_more_in_same_locality_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ask_add_more_button"/>
    <Button
        android:id="@+id/leave_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/leave_button"/>

</LinearLayout>