<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context=".MapsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:foregroundGravity="top"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mapcontainer"
            android:layout_below="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MapsActivity" >
            <fragment
                android:id="@+id/googlemap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                class="com.google.android.gms.maps.SupportMapFragment"/>

            <LinearLayout
                android:id="@+id/textcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/googlemap"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:weightSum="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/targetID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:text="@string/targetID" />

                <TextView
                    android:id="@+id/currentID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_horizontal"
                    android:text="@string/currentID" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textcontainer"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:weightSum="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_checkin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/CheckIn"
                    />

                <Button
                    android:id="@+id/btn_checkout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/CheckOut"
                    />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>